Adding new sections to landing page

--- a/src/main/resources/static/css/template/_variables.scss
+++ b/src/main/resources/static/css/template/_variables.scss
@@ -35,7 +35,7 @@ $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $white !default;
-$dark:          $gray-800 !default;
+$dark:          $black !default;
 
 $yiq-contrasted-threshold:  185 !default;
 
