Adding slider section

--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -119,6 +119,207 @@
 		<div class="row mt-3"></div>
 	</section>
 
+	<section class="testimonials">
+		<div class="row" data-aos="slide-up">
+			<h2 class="testimonials-heading">And see what others have to say</h2>
+		</div>
+	</section>
+
+	<section class="testimonials" data-aos="slide-up">
+		<div class="testimonials-div">
+			<div class="swiper-container testimonials-container">
+				<div class="swiper-wrapper testimonials-swiper">
+					<div class="swiper-slide testimonials-slide">
+						<div class="card testimonials-card">
+							<div class="layer"></div>
+							<div class="content">
+								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								</p>
+								<div class="imgBox">
+									<img class="testimonials-image" src="../images/guy1.jpg" alt="Guy 1">
+								</div>
+								<div class="details">
+									<h2>Someone Famous<br><span>Movie Star</span></h2>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide testimonials-slide">
+						<div class="card testimonials-card">
+							<div class="layer"></div>
+							<div class="content">
+								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								</p>
+								<div class="imgBox">
+									<img class="testimonials-image" src="../images/lady1.jpg" alt="Lady 1">
+								</div>
+								<div class="details">
+									<h2>Someone Famous<br><span>Influencer</span></h2>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide testimonials-slide">
+						<div class="card testimonials-card">
+							<div class="layer"></div>
+							<div class="content">
+								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								</p>
+								<div class="imgBox">
+									<img class="testimonials-image" src="../images/guy4.jpg" alt="Guy 4">
+								</div>
+								<div class="details">
+									<h2>Someone Famous<br><span>Model</span></h2>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide testimonials-slide">
+						<div class="card testimonials-card">
+							<div class="layer"></div>
+							<div class="content">
+								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								</p>
+								<div class="imgBox">
+									<img class="testimonials-image" src="../images/lady4.jpg" alt="Lady 4">
+								</div>
+								<div class="details">
+									<h2>Someone Famous<br><span>Movie Star</span></h2>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide testimonials-slide">
+						<div class="card testimonials-card">
+							<div class="layer"></div>
+							<div class="content">
+								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								</p>
+								<div class="imgBox">
+									<img class="testimonials-image" src="../images/guy3.jpg" alt="Guy 3">
+								</div>
+								<div class="details">
+									<h2>Someone Famous<br><span>Influencer</span></h2>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide testimonials-slide">
+						<div class="card testimonials-card">
+							<div class="layer"></div>
+							<div class="content">
+								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								</p>
+								<div class="imgBox">
+									<img class="testimonials-image" src="../images/lady3.jpg" alt="Lady 3">
+								</div>
+								<div class="details">
+									<h2>Someone Famous<br><span>CEO</span></h2>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide testimonials-slide">
+						<div class="card testimonials-card">
+							<div class="layer"></div>
+							<div class="content">
+								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								</p>
+								<div class="imgBox">
+									<img class="testimonials-image" src="../images/guy2.jpg" alt="Guy 2">
+								</div>
+								<div class="details">
+									<h2>Someone Famous<br><span>CEO</span></h2>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide testimonials-slide">
+						<div class="card testimonials-card">
+							<div class="layer"></div>
+							<div class="content">
+								<p>Nulla at viverra diam, id euismod quam. Vestibulum nunc nibh, rutrum et accumsan at,
+									ullamcorper in ex. Nullam in neque at elit commodo imperdiet in nec nibh.
+								</p>
+								<div class="imgBox">
+									<img class="testimonials-image" src="../images/lady2.jpg" alt="Lady 2">
+								</div>
+								<div class="details">
+									<h2>Someone Famous<br><span>Model</span></h2>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row mt-3"></div>
+	</section>
+
+	<section class="about">
+		<h2 class="about-heading">Who we are</h2>
+		<div class="row about-row">
+
+			<div class="flip-card">
+				<div class="flip-card-inner">
+					<h3 class="card-heading">Relaxation</h3>
+					<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+						diam eget purus. Maecenas ultricies semper lorem id
+						gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet, nisl
+						quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+						diam eget purus. Maecenas ultricies semper lorem id
+						gravida.
+					</p>
+				</div>
+				<div class="flip-card-back">
+					<img class="logo-image" src="../images/logo_again3.PNG" alt="logo">
+					<h3>Nam sed enim luctus diam pellentesque tincidunt.</h3>
+				</div>
+			</div>
+
+			<div class="flip-card">
+				<div class="flip-card-inner">
+					<h3 class="card-heading">Relaxation</h3>
+					<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+						diam eget purus. Maecenas ultricies semper lorem id
+						gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet, nisl
+						quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+						diam eget purus. Maecenas ultricies semper lorem id
+						gravida.
+					</p>
+				</div>
+				<div class="flip-card-back">
+					<img class="logo-image" src="../images/logo_again3.PNG" alt="logo">
+					<h3>Nam sed enim luctus diam pellentesque tincidunt.</h3>
+				</div>
+			</div>
+
+			<div class="flip-card">
+				<div class="flip-card-inner">
+					<h3 class="card-heading">Relaxation</h3>
+					<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+						diam eget purus. Maecenas ultricies semper lorem id
+						gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet, nisl
+						quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+						diam eget purus. Maecenas ultricies semper lorem id
+						gravida.
+					</p>
+				</div>
+				<div class="flip-card-back">
+					<img class="logo-image" src="../images/logo_again3.PNG" alt="logo">
+					<h3>Nam sed enim luctus diam pellentesque tincidunt.</h3>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section class="contacts" id="contacts">
 		<div class="row mt-3">
 			<div class="col-md-4 contacts-col" data-aos="fade-right" id="contacts-col">
