--- a/src/main/resources/static/css/views/index.css
+++ b/src/main/resources/static/css/views/index.css
@@ -48,7 +48,7 @@
     top: 30%;
     left: 50%;
     color: white;
-    -webkit-text-stroke: 2px black;
+    -webkit-text-stroke: 2px #1a1a1a;
     transform: translate(-50%, -30%);
     font-size: 5rem;
   }
@@ -70,7 +70,7 @@
   }
   
   .pool{
-  	background: black;
+  	background: #1a1a1a;
     background-size: cover;
     padding: 0rem;
     margin: 0;
@@ -95,7 +95,7 @@
 
   .pool-button{
     color: white;
-    background: black;
+    background: #1a1a1a;
   }
 
   .restaurant{
@@ -117,7 +117,7 @@
   }
 
   .media{
-    background-color: black;
+    background-color: #1a1a1a;
     background-size: cover;
     padding: 0rem;
     margin: 0;
@@ -140,12 +140,200 @@
     background-size: cover;
     width: 610px;
     height: 310px;
-    -webkit-box-reflect: below 1px linear-gradient(transparent, transparent, black);
+    -webkit-box-reflect: below 1px linear-gradient(transparent, transparent, #1a1a1a);
   }
 
   .swiper-image{
     width: 610px;
     height: 310px;
+  }
+
+  .testimonials {
+    background-size: cover;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0rem;
+    margin: 0;
+  }
+
+  .testimonials-heading{
+    color: #1a1a1a;
+    transform: translate(0, 118%);
+  }
+
+  .testimonials-div{
+    position: relative;
+    max-width: 100%;
+  }
+
+  .testimonials-slide {
+    background-position: center;
+    margin: 0 20px;
+    background-size: cover;
+    width: 350px;
+    min-height: 350px;
+    background: #1a1a1a;
+  }
+
+  .swiper-container-3d .swiper-slide-shadow-left,
+  .swiper-container-3d .swiper-slide-shadow-right{
+    background-image: none;
+  }
+
+  .testimonials-card{
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    background: #1a1a1a;
+    padding: 60px 40px;
+    text-align: center;
+    overflow: hidden;
+  }
+
+  .testimonials-card .layer{
+    position: absolute;
+    top: calc(100% - 2px);
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#03a9f4, #e91ee3);
+    z-index: 1;
+  }
+
+  .testimonials-card:hover .layer{
+    top: 0;
+    transition: 0.5s;
+  }
+
+  .testimonials-card .content{
+    position: relative;
+    z-index: 2;
+  }
+
+  .testimonials-card .content p{
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 20px;
+    color: white;
+  }
+
+  .testimonials-card .content .imgBox{
+    width: 100px;
+    height: 100px;
+    margin: 0 auto 10px;
+    border-radius: 50%;
+    overflow: hidden;
+    border-radius: 4px solid #1a1a1a;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  }
+
+  .testimonials-image{
+    width: 100%;
+    height: 100%;
+  }
+
+  .testimonials-card .content h2{
+    font-size: 18px;
+    color: white;
+  }
+
+  .testimonials-card .content h2 span{
+    color: #03a9f4;
+    font-size: 14px;
+    transition: 0.5s;
+  }
+
+  .testimonials-card:hover .content h2 span{
+    color: white;
+  }
+
+  .about{
+    background: #1a1a1a;
+    background-size: cover;
+    padding: 0rem;
+    padding-bottom: 6rem;
+    margin: 0;
+  }
+
+  .about-heading{
+    color: white;
+    margin-bottom: 6rem;
+    transform: translate(42%, 137%);
+  }
+
+  .about-row{
+    display: grid;
+    grid-template-columns: 28rem 28rem 28rem;
+    grid-gap: 20px;
+    margin-left: 71px;
+    bottom: 37px;
+  }
+
+  .flip-card {
+    background-color: transparent;
+    toggleBorder: #6B8096;
+    gradient: linear-gradient(#091236, #1E215D);
+    height: 509px;
+    text-align: justify;
+    color: white;
+    background-color: #1a1a1a;
+    bottom: 25px;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-top: 129px;
+    padding-right: 39px;
+    padding-bottom: 28px;
+    padding-left: 39px;
+    border-style: solid;
+    border-color: white;
+    color: white;
+    toggleBorder: #6B8096;
+    gradient: linear-gradient(#091236, #1E215D);
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    color: white;
+    toggleBorder: #6B8096;
+    gradient: linear-gradient(#091236, #1E215D);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    toggleBorder: #6B8096;
+    gradient: linear-gradient(#091236, #1E215D);
+    color: white;
+  }
+  
+  .flip-card-back {
+    toggleBorder: #6B8096;
+    gradient: linear-gradient(#091236, #1E215D);
+    transform: rotateY(180deg);
+    color: white;
+  }
+
+  .logo-image{
+    width: 300px;
+    height: 350px;
+  }
+
+  .card-heading{
+    color: white;
   }
 
   #contacts-col{
