Updated about us section

--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -102,17 +102,17 @@
 	<section class="media">
 		<div class="swiper-container" data-aos="slide-up">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_room_three.jpg"
+				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_pic6.jpg"
 						alt="fancy hotel picture"></div>
-				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_pool_day.jpg"
+				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_pic2.jpg"
 						alt="fancy hotel picture returns"></div>
-				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_room.jpg"
+				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_pic3.jpg"
 						alt="more fancy hotel pictures"></div>
-				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_pool_night.jpg"
+				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_pic4.jpg"
 						alt="fancy hotel picture strikes back"></div>
-				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_glasses.jpg"
+				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_pic5.jpg"
 						alt="fancy hotel picture continues"></div>
-				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_breakfast.jpg"
+				<div class="swiper-slide"><img class="swiper-image" src="../images/hotel_pic1.jpg"
 						alt="fancy hotel picture races onwards"></div>
 			</div>
 		</div>
@@ -264,57 +264,76 @@
 	</section>
 
 	<section class="about">
-		<h2 class="about-heading">Who we are</h2>
-		<div class="row about-row">
+		<div class="row" data-aos="slide-up">
+			<h2 class="about-heading">Our values</h2>
+		</div>
+	</section>
+
+	<section class="about">
+		<div class="row about-row" data-aos="slide-up">
 
 			<div class="flip-card">
 				<div class="flip-card-inner">
-					<h3 class="card-heading">Relaxation</h3>
-					<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
-						diam eget purus. Maecenas ultricies semper lorem id
-						gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet, nisl
-						quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
-						diam eget purus. Maecenas ultricies semper lorem id
-						gravida.
-					</p>
-				</div>
-				<div class="flip-card-back">
-					<img class="logo-image" src="../images/logo_again3.PNG" alt="logo">
-					<h3>Nam sed enim luctus diam pellentesque tincidunt.</h3>
+					<div class="flip-card-front">
+						<img class="logo-image" src="../images/logo_again.PNG" alt="logo">
+						<blockquote class="blockquote text-center">
+							<p class="mb-0 mt-3">We are what we repeatedly do. Excellence, then, is not an act, but a habit.</p>
+							<footer class="blockquote-footer">Aristotle</footer>
+						  </blockquote>
+					</div>
+					<div class="flip-card-back">
+						<h3 class="card-heading">Excellence</h3>
+						<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla
+							orci diam eget purus. Maecenas ultricies semper lorem id
+							gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet,
+							nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+							diam eget purus. Maecenas ultricies semper lorem id gravida.
+						</p>
+					</div>
 				</div>
 			</div>
 
 			<div class="flip-card">
 				<div class="flip-card-inner">
-					<h3 class="card-heading">Relaxation</h3>
-					<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
-						diam eget purus. Maecenas ultricies semper lorem id
-						gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet, nisl
-						quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
-						diam eget purus. Maecenas ultricies semper lorem id
-						gravida.
-					</p>
-				</div>
-				<div class="flip-card-back">
-					<img class="logo-image" src="../images/logo_again3.PNG" alt="logo">
-					<h3>Nam sed enim luctus diam pellentesque tincidunt.</h3>
+					<div class="flip-card-front">
+						<img class="logo-image" src="../images/logo_again.PNG" alt="logo">
+						<blockquote class="blockquote text-center">
+							<p class="mb-0 mt-3">Waste no more time arguing about what a good man should be. Be one.</p>
+							<footer class="blockquote-footer">Marcus Aurelius</footer>
+						  </blockquote>
+					</div>
+					<div class="flip-card-back">
+						<h3 class="card-heading">Integrity</h3>
+						<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+							diam eget purus. Maecenas ultricies semper lorem id
+							gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet, nisl
+							quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+							diam eget purus. Maecenas ultricies semper lorem id
+							gravida.
+						</p>
+					</div>
 				</div>
 			</div>
 
 			<div class="flip-card">
 				<div class="flip-card-inner">
-					<h3 class="card-heading">Relaxation</h3>
-					<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
-						diam eget purus. Maecenas ultricies semper lorem id
-						gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet, nisl
-						quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
-						diam eget purus. Maecenas ultricies semper lorem id
-						gravida.
-					</p>
-				</div>
-				<div class="flip-card-back">
-					<img class="logo-image" src="../images/logo_again3.PNG" alt="logo">
-					<h3>Nam sed enim luctus diam pellentesque tincidunt.</h3>
+					<div class="flip-card-front">
+						<img class="logo-image" src="../images/logo_again.PNG" alt="logo">
+						<blockquote class="blockquote text-center">
+							<p class="mb-0 mt-3">The secret of change is to focus all of your energy, not on fighting the old, but building on the new.</p>
+							<footer class="blockquote-footer">Socrates</footer>
+						  </blockquote>
+					</div>
+					<div class="flip-card-back">
+						<h3 class="card-heading">Innovation</h3>
+						<p>Suspendisse aliquet, nisl quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+							diam eget purus. Maecenas ultricies semper lorem id
+							gravida. Sed lacus lorem, mattis vitae metus eu, rhoncus dictum mi. Suspendisse aliquet, nisl
+							quis ultricies tincidunt, magna enim mollis nulla, ac fringilla orci
+							diam eget purus. Maecenas ultricies semper lorem id
+							gravida.
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
