--- a/src/main/resources/static/css/views/index.css
+++ b/src/main/resources/static/css/views/index.css
@@ -253,28 +253,27 @@
     background: #1a1a1a;
     background-size: cover;
     padding: 0rem;
-    padding-bottom: 6rem;
+    display: flex;
+    justify-content: center;
     margin: 0;
   }
 
   .about-heading{
     color: white;
-    margin-bottom: 6rem;
-    transform: translate(42%, 137%);
+    margin-top: 52px;
   }
 
   .about-row{
     display: grid;
     grid-template-columns: 28rem 28rem 28rem;
     grid-gap: 20px;
-    margin-left: 71px;
+    margin-top: 37px;
+    padding-bottom: 5rem;
     bottom: 37px;
   }
 
   .flip-card {
     background-color: transparent;
-    toggleBorder: #6B8096;
-    gradient: linear-gradient(#091236, #1E215D);
     height: 509px;
     text-align: justify;
     color: white;
@@ -286,15 +285,6 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding-top: 129px;
-    padding-right: 39px;
-    padding-bottom: 28px;
-    padding-left: 39px;
-    border-style: solid;
-    border-color: white;
-    color: white;
-    toggleBorder: #6B8096;
-    gradient: linear-gradient(#091236, #1E215D);
     transition: transform 0.8s;
     transform-style: preserve-3d;
   }
@@ -308,28 +298,38 @@
     width: 100%;
     height: 100%;
     color: white;
-    toggleBorder: #6B8096;
-    gradient: linear-gradient(#091236, #1E215D);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
   }
   
   .flip-card-front {
-    toggleBorder: #6B8096;
-    gradient: linear-gradient(#091236, #1E215D);
+    border-style: solid;
+    border-color: white;
     color: white;
   }
   
   .flip-card-back {
-    toggleBorder: #6B8096;
-    gradient: linear-gradient(#091236, #1E215D);
-    transform: rotateY(180deg);
+    padding-top: 129px;
+    padding-right: 39px;
+    padding-bottom: 28px;
+    padding-left: 39px;
+    border-style: solid;
+    border-color: white;
     color: white;
+    transform: rotateY(180deg);
+  }
+
+  .blockquote{
+    margin-right: 16px;
+    margin-left: 16px;
   }
 
   .logo-image{
-    width: 300px;
-    height: 350px;
+    width: 200px;
+    height: 250px;
+    margin-top: 71px;
+    margin-left: 109px;
+
   }
 
   .card-heading{
